# serve-review

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/serve_review/: __init__.py  __main__.py  cache.py  cert_manager.py  cli.py  client.py  daemon.py  git_ops.py  hooks.py  models.py  server.py
src/serve_review/skill/: SKILL.md
src/serve_review/static/: app.js  index.html  manifest.json  prism.js  style.css  sw.js
tests/: conftest.py  test_cache.py  test_cert_manager.py  test_cli.py  test_client.py  test_daemon.py  test_git_ops.py  test_hooks.py  test_models.py  test_server.py  test_static.py
